add option for change badge shape

--- a/options.html
+++ b/options.html
@@ -11,6 +11,13 @@
                 <input type="checkbox" name="onlynew" value="1">
                 Показывать только новые письма, поступившие с момента загрузки страницы
             </div>
+            <div>
+                Форма бейджа:
+                <select name="shape">
+                    <option value="circle" selected>круг</option>
+                    <option value="rectangle">квадрат</option>
+                </select>
+            </div>
         </div>
         <div>
             <button id="save">Сохранить</button>
